--- a/package.json
+++ b/package.json
@@ -1,6 +1,10 @@
 {
   "dependencies": {
-    "crypto-js": "^4.0.0"
+    "@types/crypto-js": "^3.1.47",
+    "@types/express": "^4.17.6",
+    "axios": "^0.19.2",
+    "crypto-js": "^4.0.0",
+    "express": "^4.17.1"
   },
   "devDependencies": {
     "@types/node": "^14.0.13",
